<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.nour.quiz.MainActivity">

    <ImageView
        android:id="@+id/android_pyramids_image_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/Q1"
            style="@style/TextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/Q1" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/Yes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="30dp"
                android:text="@string/CheckBox1"
                tools:ignore="DuplicateIds" />

            <CheckBox
                android:id="@+id/No"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/CheckBox2"
                tools:ignore="DuplicateIds" />

        </LinearLayout>

        <TextView
            android:id="@+id/Q2"
            style="@style/TextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/Q2" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/Yes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="30dp"
                android:text="@string/CheckBox1"
                tools:ignore="DuplicateIds" />

            <CheckBox
                android:id="@+id/No"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/CheckBox2"
                tools:ignore="DuplicateIds" />

        </LinearLayout>

        <TextView
            android:id="@+id/Q3"
            style="@style/TextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/Q3" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/Yes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="30dp"
                android:text="@string/CheckBox1"

                tools:ignore="DuplicateIds" />

            <CheckBox
                android:id="@+id/No"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/CheckBox2"
                tools:ignore="DuplicateIds" />

        </LinearLayout>

        <TextView
            android:id="@+id/Q4"
            style="@style/TextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/Q4" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/Yes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="30dp"
                android:text="@string/CheckBox1"

                tools:ignore="DuplicateIds" />

            <CheckBox
                android:id="@+id/No"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/CheckBox2"
                tools:ignore="DuplicateIds" />

        </LinearLayout>

        <TextView
            android:id="@+id/Q5"
            style="@style/TextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/Q5" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/Yes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="30dp"
                android:text="@string/CheckBox1"

                tools:ignore="DuplicateIds" />

            <CheckBox
                android:id="@+id/No"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/CheckBox2"
                tools:ignore="DuplicateIds" />

        </LinearLayout>

        <TextView
            android:id="@+id/Q6"
            style="@style/TextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/Q6" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/Yes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="30dp"
                android:text="@string/CheckBox1"

                tools:ignore="DuplicateIds" />

            <CheckBox
                android:id="@+id/No"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/CheckBox2"
                tools:ignore="DuplicateIds" />

        </LinearLayout>

        <TextView
            android:id="@+id/Q7"
            style="@style/TextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/Q7" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/Yes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="30dp"
                android:text="@string/CheckBox1"

                tools:ignore="DuplicateIds" />

            <CheckBox
                android:id="@+id/No"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/CheckBox2"
                tools:ignore="DuplicateIds" />

        </LinearLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal">

            <Button
                android:id="@+id/button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:background="@drawable/button"
                android:onClick="result"
                android:text="@string/button" />

        </RelativeLayout>
    </LinearLayout>

</RelativeLayout>
</ScrollView>
